# parm

./: .env.example  .gitattributes  .gitignore  AGENTS.md  DECISIONS.md  NEXT-STEPS.md  README.md  parm-proposal.md  pyproject.toml
.Codex/: active-passive-recall.md  benchmark-guide.md  benchmark-plan.md  fairness-checklist.md
.Codex/benchmark-results/: README.md  input_rag.jsonl  input_rag.metrics.json  no_memory.jsonl  parm_oracle_monitor.jsonl  parm_oracle_monitor.metrics.json  prompted_memory_tool.jsonl  prompted_memory_tool.metrics.json
data/amara-life-v1/: LICENSE  README.md
data/benchmark-results/: README.md  all-entity-output-rag-gpt-5-mini.config.json  all-entity-output-rag-gpt-5-mini.jsonl  all-entity-output-rag-gpt-5-mini.metrics.json  input-rag-dense-gpt-5-mini.config.json  input-rag-dense-gpt-5-mini.jsonl  input-rag-enhanced-frozen-gpt-5-mini.config.json  input-rag-enhanced-frozen-gpt-5-mini.jsonl  input-rag-enhanced-populate-gpt-5-mini.jsonl  input-rag-gpt-5-mini.config.json  input-rag-gpt-5-mini.jsonl  input-rag-gpt-5-mini.metrics.json  score-dense.json  (+23 more)
docs/: benchmark-evaluation.md  gbrain-amara-local-setup.md  parm-convergence-retrieval-design.md  parm-output-cued-memory-examples.md  parm-realistic-trace-seeds.md  retrieval-mode-axis-plan.md
scripts/: build_pilot_cases.py  build_pilot_contexts.py  dump_gbrain_retrieval.ts  summarize_output_rag.py
tests/: test_backends.py  test_baselines.py  test_cli_smoke.py  test_dataset.py  test_models.py  test_response_cache.py  test_retrieval.py  test_retrieval_export.py  test_scoring.py  test_workbench.py
(+28 files in other folders)
