[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "parm-bench"
version = "0.1.0"
description = "Synthetic benchmark harness for PARM cross-source memory joins."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
parm-bench = "parm_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
