[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "parm-bench"
version = "0.1.0"
description = "Output-cued personal-memory decision benchmark."
requires-python = ">=3.10"
dependencies = ["tiktoken>=0.7"]

[project.scripts]
parm-bench = "parm_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
