[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "parm-bench"
version = "0.1.0"
description = "Output-cued personal-memory decision benchmark."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "openai>=2.44",
  "python-dotenv>=1.0",
  "sentence-transformers>=3.0",
  "tiktoken>=0.7",
]

[project.scripts]
parm-bench = "parm_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
